<resources>
    <string name="app_name">Food Reviewer</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="create_account">create account</string>
    <string name="login">login</string>
    <string name="menus">Menus:</string>
    <string name="restaurant_1">Restaurant 1</string>
    <string name="restaurant_2">Restaurant 2</string>
    <string name="restaurant_3">Restaurant 3</string>
    <string name="settings">Settings</string>
    <string name="user_settings">User settings:</string>
    <string name="input_keycode_here">input keycode here</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="e_mail">E-mail:</string>
    <string name="input_name_here">Input name here</string>
    <string name="input_age_here">Input age here</string>
    <string name="input_e_mail_here">Input e-mail here</string>
    <string name="change_info">change info</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="food_was_tasty_0_5">Food was tasty (0-5):</string>
    <string name="temperature_of_food_0_5">Temperature of food (0-5):</string>
    <string name="give_some_other_feedback">Give some other feedback:</string>
    <string name="feedback">feedback</string>
    <string name="admin_settings">Admin settings</string>
    <string name="admin_settings_string">Admin settings:</string>
    <string name="delete_user">Delete user:</string>
    <string name="delete">Delete</string>
    <string name="delete_all_reviews">Delete all reviews:</string>
    <string name="delete_review_by_tag">Delete review by tag:</string>
    <string name="tag">Tag</string>
</resources>
